# hax-dev

./: .gitignore  .gitmodules  CHANGELOG.md  CI.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  flake.nix  justfile  mkdocs.yml  proof-libs  rust-toolchain.toml  setup.sh
.github/: sync_hax.yml
.github/assets/: change-padding.sh
.github/workflows/: bertie.yml  changelog.yml  charon.yml  clippy_rust_engine.yml  engine_js_build.yml  extract_and_run_coq.yml  flake_lock.yml  format.yml  install_and_test.yml  mlkem.yml  rustc-coverage-tests-full.yml  rustc-coverage-tests.yml  sync_hax.yml  test.yml  test_installs.yml  this-month-in-hax.yml
.utils/: rebuild.sh  rust-by-example.js  this-month-in-hax-skeleton.sh
cli/: default.nix
cli/driver/src/: callbacks_wrapper.rs  driver.rs  exporter.rs  features.rs
cli/subcommands/: Cargo.toml  build.rs
cli/subcommands/src/: cargo_hax.rs
docs/: default.nix  publications.md
docs/blog/posts/: reworking-names.md
docs/frontend/: benchmarks.md  evaluation.md  index.md  submissions.md
docs/javascripts/: hax_playground.js
docs/manual/: index.md
docs/manual/faq/: index.md
docs/manual/fstar/: .nav.yml  index.md  quick_start.md
docs/manual/fstar_quick_start/: index.md
docs/manual/fstar_tutorial/: index.md  panic-freedom.md
docs/manual/lean/: index.md  internals.md  lean_internals.md  quick_start.md
docs/manual/lean_quick_start/: index.md
docs/manual/lean_tutorial/: index.md  panic-freedom.md  properties.md
docs/manual/quick_start/: index.md
docs/manual/tutorial/: data-invariants.md  index.md  panic-freedom.md  properties.md
docs/stylesheets/: hax_playground.css
engine/: dune-project  hax-engine.opam
engine/backends/coq/: coq_ast.ml
engine/backends/fstar/: fstar_backend.ml
engine/backends/lean/: dune  lean_backend.ml
engine/backends/proverif/: proverif_backend.ml
engine/lib/: ast.ml  ast_builder.ml  ast_utils.ml  attr_payloads.ml  dependencies.ml  diagnostics.ml  export_ast.ml  features.ml  graph_stable_sort.ml  hax_io.ml  import_thir.ml  import_thir.mli  local_ident.mli  phase_utils.ml  profiling.ml  rust_engine_types.ml  side_effect_utils.ml  span.ml  span.mli  subtype.ml  utils.ml
engine/lib/concrete_ident/: concrete_ident.ml  concrete_ident.mli  concrete_ident_render_sig.ml  concrete_ident_types.ml  concrete_ident_view.ml  concrete_ident_view_types.ml  explicit_def_id.ml  explicit_def_id.mli  impl_infos.ml  thir_simple_types.ml
engine/lib/deprecated_generic_printer/: deprecated_generic_printer.ml  deprecated_generic_printer_base.ml
engine/lib/generic_printer/: generic_printer.ml
engine/lib/phases/: phase_and_mut_defsite.ml  phase_and_mut_defsite.mli  phase_bundle_cycles.mli  phase_cf_into_monads.ml  phase_cf_into_monads.mli  phase_direct_and_mut.ml  phase_direct_and_mut.mli  phase_drop_metasized.ml  phase_drop_metasized.mli  phase_drop_references.ml  phase_drop_references.mli  phase_drop_return_break_continue.ml  phase_drop_return_break_continue.mli  phase_drop_sized_trait.mli  phase_functionalize_loops.ml  phase_functionalize_loops.mli  phase_hoist_disjunctive_patterns.mli  phase_local_mutation.ml  phase_local_mutation.mli  phase_reorder_fields.ml  (+16 more)
examples/: Cargo.toml  Makefile  README.md  default.nix
examples/barrett/: Makefile
examples/barrett/proofs/fstar/extraction/: Makefile
examples/barrett/proofs/lean/extraction/: Lib.lean  lakefile.toml
examples/barrett/src/: lib.rs
examples/coq-example/proofs/coq/extraction/: Coq_example.v  Coq_example_Dummy_core_lib.v
examples/coverage/: default.nix
examples/coverage/src/: lib.rs  test_struct.rs
examples/lean_barrett/: Cargo.toml  Makefile
examples/lean_barrett/proofs/lean/extraction/: lakefile.toml
examples/lean_barrett/src/: lib.rs
examples/lean_chacha20/: Cargo.toml  Makefile
examples/lean_chacha20/proofs/lean/extraction/: Lean_chacha20_manual_edit.lean  lakefile.toml  lean_chacha20_manual_edit.lean
examples/sha256/proofs/fstar/extraction/: Sha256.fst
examples/sha256/src/: sha256.rs
frontend/exporter/: Cargo.toml
hax-lib/: Cargo.toml  build.rs
hax-lib-protocol-macros/: Cargo.toml
hax-lib-protocol-macros/src/: lib.rs
hax-lib/macros/: Cargo.toml
hax-lib/src/: dummy.rs  implementation.rs  proc_macros.rs  prop.rs
hax-types/src/: driver_api.rs  engine_api.rs
rust-engine/: Cargo.toml  README.md
rust-engine/macros/: Cargo.toml
rust-engine/macros/src/: lib.rs  partial_application.rs  replace.rs
rust-engine/src/: ast.rs  backends.rs  hax_io.rs  lean.rs  lib.rs  main.rs  names.rs  ocaml_engine.rs  phase.rs  printer.rs  resugarings.rs  symbol.rs
rust-engine/src/ast/: diagnostics.rs  fragment.rs  identifiers.rs  literals.rs  resugared.rs  span.rs  visitors.rs
rust-engine/src/ast/identifiers/: global_id.rs
rust-engine/src/ast/identifiers/global_id/: compact_serialization.rs  view.rs
rust-engine/src/backends/: lean.rs  rust.rs
rust-engine/src/names/: generated.rs
rust-engine/src/printer/: allocator.rs  pretty_ast.rs  render_view.rs
rust-printer/: Cargo.toml  README.md
rust-printer/macros/src/: lib.rs
rust-printer/src/: ast.rs  import.rs  lib.rs  main.rs  printer.rs  symbol.rs
rust-printer/src/ast/: derives.rs  diagnostics.rs  fragment.rs  helper.rs  identifiers.rs  literals.rs  node.rs  span.rs
rust-printer/tests/: Cargo.toml  print.sh
rust-printer/tests/src/: main.rs
rustc-coverage-tests/: Cargo.toml  README.md  requirements.txt  run-coverage-tests.py  run-coverage-tests.sh  test_config.yaml  update-test-sources.sh
rustc-coverage-tests/src/: lib.rs
test-harness/src/: command_hax_ext.rs
tests/: Cargo.toml
tests/attributes/src/: lib.rs
tests/cli/interface-only/src/: lib.rs
tests/lean-tests/: Cargo.toml
tests/lean-tests/src/: enums.rs  lib.rs  structs.rs
tests/lifetime-trait-issue/: Cargo.toml
tests/lifetime-trait-issue/src/: lib.rs
tests/literals/src/: lib.rs
tests/loops/src/: lib.rs
tests/naming/src/: lib.rs
tests/side-effects/: Cargo.toml
tests/statics/: Cargo.toml
tests/statics/src/: lib.rs
tests/traits/: Cargo.toml
tests/traits/src/: lib.rs
(+313 files in other folders)
