[package]
name = "hax-rust-engine"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "The engine of the hax toolchain."

[dependencies]
hax-frontend-exporter.workspace = true
hax-rust-engine-macros.workspace = true
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde = { workspace = true, features = ["derive"] }
hax-types.workspace = true
schemars.workspace = true
itertools.workspace = true
serde_stacker = "0.1.12"
pretty = "0.12"
derive_generic_visitor = "0.3.0"
pastey = "0.1.0"
camino = "1.1.11"
