[package]
name = "rust-printer"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
hax-types = { path = "../hax-types", default-features = false }
hax-frontend-exporter = { path = "../frontend/exporter", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
macro_rules_attribute = "0.2.2"
schemars.workspace = true

[build-dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
proc-macro2.workspace = true
prettyplease = "0.2.33"
quote.workspace = true
itertools.workspace = true
schemars.workspace = true
