[workspace]
members = [
        "assert",
        "enum-struct-variant",
        "literals",
        "slices",
        "naming",
        "if-let",
        "let-else",
        "enum-repr",
        "pattern-or",
        "side-effects",
        "mut-ref-functionalization",
        "generics",
        "lean-tests",
        "loops",
        "even",
        "odd",
        "never-type",
        "attributes",
        "attribute-opaque",
        "raw-attributes",
        "traits",
        "dyn",
        "reordering",
        "nested-derefs",
        "patterns",
        "proverif-minimal",
        "proverif-basic-structs",
        "proverif-ping-pong",
        "proverif-noise",
        "proverif-fn-to-letfun",
        "cli/include-flag",
        "cli/interface-only",
        "recursion",
        "functions",
        "guards",
        "cyclic-modules",
        "unsafe",
        "constructor-as-closure",
        "statics",
]
resolver = "2"
