[package]
name = "hax-rust-engine-macros"
description = "This crate provides helpers procedural macros for the `hax-rust-engine`"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2.workspace = true
quote.workspace = true
proc-macro-crate = "3.3.0"
